--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,12 +1,12 @@
 version: "3"
 services:
   nas-tools:
-    image: hsuyelin/nas-tools:latest
+    image: mindcont/nas-tools-mt:latest
     ports:
       - 3000:3000        # 默认的webui控制端口
     volumes:
       - ./config:/config   # 冒号左边请修改为你想保存配置的路径
-      - /你的媒体目录:/你想设置的容器内能见到的目录   # 媒体目录，多个目录需要分别映射进来，需要满足配置文件说明中的要求
+      - /data:/data   # 媒体目录，多个目录需要分别映射进来，需要满足配置文件说明中的要求
     environment: 
       - PUID=0    # 想切换为哪个用户来运行程序，该用户的uid
       - PGID=0    # 想切换为哪个用户来运行程序，该用户的gid
