--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   nas-tools:
-    image: mindcont/nas-tools-mt:latest
+    image: mindcont/nas-tools:latest
     ports:
       - 3000:3000        # 默认的webui控制端口
     volumes:
